<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Magyar-olasz szótár</string>

    <string name="hungarian_word">Magyar szó</string>
    <string name="italian_word">Olasz szó</string>
    <string name="hungarian_word_hint">írd ide a magyar szót</string>
    <string name="italian_word_hint">írd ide az olasz szót</string>
    <string name="creating_new_translation">Új fordítás létrehozása</string>
    <string name="search">keresés</string>
    <string name="search_hint">írd be a keresendő szót</string>
    <string name="cancel">Mégse</string>
    <string name="ok">Oké</string>
    <string name="translation">Fordítás</string>
    <string name="quiz">Kvíz</string>
    <string name="italian">Olasz</string>
    <string name="hungarian">Magyar</string>
    <string name="switch_languages">Nyelvváltás</string>
    <string name="random">Véletlenszerű</string>
    <string name="personal_favorites">Személyes kedvencek</string>
    <string name="switch_quiz_type">kvíz típus választás</string>
    <string name="word_to_translate">lefordítandó szó</string>

    <string name="start_quiz">Start</string>
    <string name="check_quiz">Ellenőrzés</string>
    <string name="quiz_result">A kvízed eredménye:</string>

    <string name="quiz_ratio_template">%1$d/%2$d</string>
    <string name="quiz_percentage_template">%1$.2f%%</string>

    <string name="delete_all_words">Összes szó törlése</string>
    <string name="delete_all_words_confirmation_dialog_message">Ez a művelet minden szót törölni fog. Biztos ezt akarod?</string>
    <string name="no">Nem</string>
    <string name="yes">Igen</string>
</resources>