<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/randomTextView"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/random"
        app:autoSizeTextType="uniform"
        />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/quizTypeSwitchButton"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:theme="@style/QuizTypeSwitchTheme"
            android:background="@android:color/transparent"
            android:contentDescription="@string/switch_quiz_type"
            />
    </FrameLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/personal_favorites"
        app:autoSizeTextType="uniform"
        />

</LinearLayout>